--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");
-@plugin "daisyui";
 
 html {
   background-color: #0a0a0a;
